--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,28 @@
-# Environment files
+# ===============================
+# Environment files (Secrets)
+# ===============================
 .env
 config.env
 
+# ===============================
 # Logs
+# ===============================
 logs/
+*.log
+status.txt
 
-#other
-__pycache__
+# ===============================
+# Python cache
+# ===============================
+__pycache__/
+*.pyc
 
-build
+# ===============================
+# Build artifacts
+# ===============================
+build/
+
+# ===============================
+# Other
+# ===============================
+.terraform/
